--- a/restapi/package.json
+++ b/restapi/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-request": "^1.2.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
